<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/base_text_color"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_content_1"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <com.zmzing.highlighttextview.HighlightTextView
        android:id="@+id/main_tv_testContent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_content_2"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <com.zmzing.highlighttextview.HighlightTextView
        android:id="@+id/main_tv_testContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_content_3"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <com.zmzing.highlighttextview.HighlightTextView
        android:id="@+id/main_tv_testContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_content_4"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <com.zmzing.highlighttextview.HighlightTextView
        android:id="@+id/main_tv_testContent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_content_5"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

    <com.zmzing.highlighttextview.HighlightTextView
        android:id="@+id/main_tv_testContent5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/base_text_color"
        android:textSize="15sp" />

</LinearLayout>
